<resources>
    <string name="app_name">FloatingWindowDemo</string>
    <string name="alert_dialog">AlertDialog</string>
    <string name="custom_dialog_by_alert_dialog">Custom Dialog(AlertDialog)</string>
    <string name="custom_dialog_by_activity">Custom Dialog(Activity)</string>
    <string name="popup_window">Popup Window</string>
    <string name="title">Hi</string>
    <string name="message">How are you?</string>
    <string name="good">Good</string>
    <string name="bad">Bad</string>
    <string name="fine">Fine</string>
    <string name="share">Share</string>
    <string name="look">Look</string>
    <string name="comment">Comment</string>
    <string name="floating_window">Floating Window</string>
    <string name="custom_dialog_ios">Custom Dialog(iOS)</string>
</resources>
