<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_alert_dialog"
            style="@style/AppTheme.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alert_dialog" />

        <TextView
            android:id="@+id/tv_custom_dialog_by_alert_dialog"
            style="@style/AppTheme.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/custom_dialog_by_alert_dialog" />

        <TextView
            android:id="@+id/tv_custom_dialog_by_activity"
            style="@style/AppTheme.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/custom_dialog_by_activity" />

        <TextView
            android:id="@+id/tv_popup_window"
            style="@style/AppTheme.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/popup_window" />
    </LinearLayout>
</RelativeLayout>
