<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:padding="16dp">

        <ImageView
            android:id="@+id/iv_custom_dialog_by_alert_dialog_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/ic_launcher"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@+id/iv_custom_dialog_by_alert_dialog_icon"
            android:text="@string/title"
            android:textColor="#FFF"
            android:textSize="24sp"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/iv_custom_dialog_by_alert_dialog_icon" />

        <ImageView
            android:id="@+id/iv_custom_dialog_by_alert_dialog_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_close_white_24dp"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="64dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="64dp"
        android:text="@string/message"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#9E9E9E" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_custom_dialog_by_alert_dialog_bad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/bad"
            android:textColor="#424242"
            android:textSize="20sp"
            android:layout_marginEnd="1dp" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="#9E9E9E" />

        <TextView
            android:id="@+id/tv_custom_dialog_by_alert_dialog_good"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/good"
            android:textColor="#424242"
            android:textSize="20sp"
            android:layout_marginStart="1dp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#9E9E9E" />
</LinearLayout>